add: place debugged
