# internal/delivery/docs/swagger.yaml
@@ -1,4 +1,20 @@
 definitions:
+  models.Place:
+    properties:
+      city_id:
+        type: integer
+      district_id:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      properties: {}
+      tags:
+        items:
+          $ref: '#/definitions/models.Tag'
+        type: array
+    type: object
   models.PlaceCreate:
     properties:
       city_id:
@@ -77,6 +93,21 @@ definitions:
       name:
         type: string
     type: object
+  swagger.Filters:
+    properties:
+      city_id:
+        type: integer
+      district_id:
+        type: integer
+      name:
+        type: string
+      pagination_page:
+        type: integer
+      tag_ids:
+        items:
+          type: integer
+        type: array
+    type: object
   swagger.GetByAuthor:
     properties:
       place_reviews:
@@ -91,6 +122,37 @@ definitions:
 info:
   contact: {}
 paths:
+  /place/by_id:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Place id
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully
+          schema:
+            $ref: '#/definitions/models.Place'
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      tags:
+      - place
   /place/create:
     post:
       consumes:
@@ -109,6 +171,40 @@ paths:
           description: Successfully created place with id
           schema:
             type: integer
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      tags:
+      - place
+  /place/get_all_with_filter:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Filters
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/swagger.Filters'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully
+          schema:
+            items:
+              $ref: '#/definitions/models.Place'
+            type: array
         "400":
           description: Invalid input
           schema:
